# hdrv

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  hdrv.pro  hdrv.qrc
dependencies/boost/: boost.pri
dependencies/include/pfm/: color_pixel.hpp
dependencies/include/pic/: pic.hpp  pic_output_file.hpp
dependencies/lib_win64_vc14_debug/: Iex-2_2.lib  IexMath-2_2.lib  IlmThread-2_2.lib  Imath-2_2.lib  pfm.lib  pic.lib  zlibstaticd.lib
dependencies/lib_win64_vc14_release/: Iex-2_2.lib  IexMath-2_2.lib  IlmImfUtil-2_2.lib  Imath-2_2.lib  pfm.lib  pic.lib  zlibstatic.lib
dependencies/openexr/: openexr.pri
dependencies/openexr/lib_win64_vc14_debug/: Half.lib
dependencies/openexr/lib_win64_vc14_release/: Half.lib  IlmThread-2_2.lib
dependencies/pfm/: config.hpp  pfm.pro  pfm_input_file.cpp  pfm_output_file.cpp
dependencies/pfm/include/pfm/: byte_order.hpp  pfm.hpp  pfm_input_file.hpp  pfm_output_file.hpp
dependencies/pic/: config.hpp  pic.pro  pic_input_file.cpp  pic_output_file.cpp
dependencies/pic/include/pic/: pic_input_file.hpp  pixel.hpp
src/: Main.cpp
src/image/: Image.cpp  Image.hpp
src/model/: ImageCollection.cpp  ImageCollection.hpp  ImageDocument.cpp  ImageDocument.hpp
src/shader/: RenderImage.frag
src/view/: ErrorMessage.qml  ExportButton.qml  ImageArea.cpp  ImageArea.hpp  ImageProperties.qml  ImageRenderer.cpp  ImageRenderer.hpp  Main.qml  TabBar.qml
thumbnails/: ClassFactory.cpp  ClassFactory.hpp  Registry.cpp  Registry.hpp  StreamWrapper.hpp  ThumbnailProvider.cpp  ThumbnailProvider.hpp  Thumbnails.cpp  Thumbnails.hpp  thumbnails.pro
viewer/: Main.cpp  qtquickcontrols2.conf  viewer.pro  viewer.qrc
viewer/image/: Image.cpp  Image.hpp
viewer/model/: ImageCollection.hpp  ImageDocument.cpp  ImageDocument.hpp  Settings.cpp  Settings.hpp
viewer/shader/: RenderImage.frag  RenderImage.vert
viewer/view/: AppSettings.qml  ExportButton.qml  IPCClient.cpp  IPCClient.hpp  IPCServer.cpp  IPCServer.hpp  ImageArea.cpp  ImageArea.hpp  ImageProperties.qml  ImageRenderer.cpp  ImageRenderer.hpp  Main.qml  TabBar.qml  TabNav.qml
